# anishell

./: .gitignore  CMakeLists.txt  README.md  autocomplete.c  build.sh  config.c  input.c  inputs.txt  main.c  parser.c  shell.h  test.c  utils.c
